--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-feature
         android:glEsVersion="0x00020000"
         android:required="true" />
@@ -22,7 +22,7 @@
         android:theme="@style/AppTheme"
         tools:targetApi="31">
         <activity
-            android:name=".MapaActivity"
+            android:name=".InformationActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
@@ -34,13 +34,14 @@
             </intent-filter>
         </activity>
 
+        <receiver android:name=".GeofenceReceiver" />
+
         <uses-library
             android:name="org.apache.http.legacy"
             android:required="false" />
-
         <meta-data
-            android:name="com.google.android.maps.v2.API_KEY"
-            android:value="${MAPS_API_KEY}" />
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}"/>
         <meta-data
             android:name="com.google.android.gms.version"
             android:value="@integer/google_play_services_version" />
